--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.4.2",
     "react-dropdown": "^1.7.0",
     "react-fade-in": "^0.1.6",
+    "react-ga": "^2.6.0",
     "react-google-recaptcha": "^1.0.4",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
