--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "react": "^16.4.2",
+    "react-cookie-consent": "^2.5.0",
     "react-date-picker": "^7.0.0",
     "react-dom": "^16.4.2",
     "react-fade-in": "^0.1.6",
@@ -62,7 +63,7 @@
     "@types/jest": "^23.3.1",
     "@types/jquery": "^3.3.6",
     "@types/node": "^10.9.4",
-    "@types/react": "^16.4.9",
+    "@types/react": "^16.9.2",
     "@types/react-dom": "^16.0.7",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^6.0.6",
