Fix: update NPM auth token

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-//registry.npmjs.org/:_authToken=199fa5c9-8c7c-4cc2-b4c4-78524fdcab41
+//registry.npmjs.org/:_authToken 309ea7bd-5b03-4f79-85a1-2389db70e6e8
