--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-fade-in": "^0.1.6",
     "react-google-recaptcha": "^1.0.4",
     "react-grid-layout": "^0.16.6",
+    "react-helmet": "^5.2.1",
     "react-intl": "^2.8.0",
     "react-maskinput": "^1.0.1",
     "react-redux": "^5.0.7",
