Fix disable absolute_redirect in nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen       3000;
     server_name  localhost;
+    absolute_redirect off;
 
     port_in_redirect off;
     proxy_set_header Host $host:$server_port;
