--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "^2.17.0",
+    "react-scroll": "^1.7.14",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.2",
     "sinon": "^7.2.3",
