--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sinon": "^7.2.3",
     "tslint-eslint-rules": "^5.4.0",
     "ua-parser-js": "^0.7.19",
+    "video-react": "^0.14.1",
     "webpack": "^3.11.0"
   },
   "scripts": {
