--- a/.drone.yml
+++ b/.drone.yml
@@ -1,69 +1,62 @@
 ---
 kind: pipeline
-name: "Push"
+name: "Stage"
 
 concurrency:
   limit: 2
 
 steps:
-  - name: "Test & Build"
+  - name: "Test"
     image: node:10.11
     environment:
-      REACT_APP_BUILD_VERSION: Enterprise
       NPM_AUTH_TOKEN:
         from_secret: drone_npm_auth_token
     commands:
       - echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > .npmrc
-      - export REACT_APP_GIT_SHA=$(git rev-parse --short HEAD)
-      - echo $REACT_APP_GIT_SHA > .tags
-      - export BUILD_DOMAIN=$(cat .domains)
-      - export BUILD_EXPIRE=$(date -d "+1 month" +%s000)
       - npm -g install yarn
       - yarn install
       - yarn lint
       - yarn test:ci --collectCoverage=true
+
+  - name: "Build"
+    image: node:10.11
+    commands:
+      - echo ${DRONE_COMMIT_SHA:0:7} > .tags
+      - export REACT_APP_GIT_SHA=$(cat .tags)
+      - export BUILD_DOMAIN=$(cat .domains)
+      - export BUILD_EXPIRE=$(date -d "+1 month" +%s000)
+      - npm -g install yarn
       - yarn build
 
-  - name: "Stage with mock server"
-    image: alpine/git
+  - name: "Build container"
+    image: plugins/docker
     environment:
-      PRIVATE_KEY:
-        from_secret: deploy_key
-    commands:
-      - echo "$PRIVATE_KEY" | base64 -d > id_rsa
-      - chmod 0600 id_rsa
-      - cd build/config/
-      - echo "window.env={api:{authUrl:'http://api-v2.mock.openware.work/api/v2/barong',tradeUrl:'http://api-v2.mock.openware.work/api/v2/peatio',applogicUrl:'http://api-v2.mock.openware.work/api/v2/applogic',rangerUrl:'ws://ranger.mock.openware.work/api/v2/ranger'},captcha:{captchaType:'none',siteKey:''}};" > env.js
-      - cat env.js
-      - cd /drone/src/
-      - scp -r -i id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null build mock@mock.openware.work:/home/mock/builds/${DRONE_COMMIT_SHA:0:7}
-      - scp -r -i id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null coverage/lcov-report mock@mock.openware.work:/home/mock/builds/${DRONE_COMMIT_SHA:0:7}-coverage
-      - echo "http://${DRONE_COMMIT_SHA:0:7}.mock.openware.work"
-      - echo "http://${DRONE_COMMIT_SHA:0:7}-coverage.mock.openware.work"
-
-  - name: "Notify staging"
-    image: plugins/slack
+      NPM_AUTH_TOKEN:
+        from_secret: drone_npm_auth_token
+      REACT_APP_BUILD_VERSION: Enterprise
     settings:
-      webhook:
-        from_secret: baseapp_slack_webhook
-      channel:
-        from_secret: baseapp_slack_channel
-      template: >
-        {{#success build.status}}
-          [SUCCESS] (Base Application) Branch {{ build.branch }} by {{ build.author }} staging has succeeded!
+      registry: reg.openware.work
+      repo: reg.openware.work/emirex/baseapp
+      build_args_from_env:
+        - REACT_APP_BUILD_VERSION
+        - NPM_AUTH_TOKEN
+      username:
+        from_secret: ow_registry_username
+      password:
+        from_secret: ow_registry_password
 
-          Visit http://{{ truncate build.commit 7 }}.mock.openware.work to check it out!
-          Coverage report: http://{{ truncate build.commit 7 }}-coverage.mock.openware.work
-        {{else}}
-          [FAILURE] Branch {{ build.branch }} by {{ build.author }} staging has failed!
-        {{/success}}
-        Check the build info here: {{ build.link }}
-    when:
-      status: [success, failure]
+  - name: "Redeploy on stage"
+    image: rubykube/microkube:0.2.0
+    environment:
+      WEBHOOK_JWT_SECRET:
+        from_secret: emirex_webhook_secret
+    commands:
+      - export latest_image=reg.openware.work/emirex/baseapp:$(cat .tags)
+      - cd /home/app
+      - bundle exec rake payload:send[frontend,$latest_image,http://emirex.openware.work:1337]
 
 trigger:
-  event:
-    - push
   branch:
-    exclude:
-    - master
+  - customer/emirex
+  event:
+  - push
