--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-collapsible": "^2.8.0",
     "react-cookie-consent": "^2.5.0",
     "react-copy-to-clipboard": "^5.0.2",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-date-picker": "^7.0.0",
     "react-dom": "^16.6.3",
     "react-dropdown": "^1.7.0",
