--- a/.drone.yml
+++ b/.drone.yml
@@ -8,9 +8,6 @@ concurrency:
 steps:
   - name: "Test"
     image: node:10.11
-    environment:
-      NPM_AUTH_TOKEN:
-        from_secret: drone_npm_auth_token
     commands:
       - export REACT_APP_GIT_SHA=$(git rev-parse --short HEAD)
       - echo $REACT_APP_GIT_SHA > .tags
@@ -26,13 +23,10 @@ steps:
     image: plugins/gcr
     environment:
       BUILD_EXPIRE: "3 month"
-      NPM_AUTH_TOKEN:
-        from_secret: drone_npm_auth_token
     settings:
       build_args_from_env:
 
         - BUILD_EXPIRE
-        - NPM_AUTH_TOKEN
       json_key:
         from_secret: openware_gcp_creds_base64
     when:
@@ -110,18 +104,31 @@ steps:
     commands:
       - BUNDLE_GEMFILE=/sdk/Gemfile bundle exec rake --rakefile=/sdk/Rakefile ci:prebuild
 
-  - name: "Build Docker image"
-    image: plugins/docker
-    settings:
-      username:
-        from_secret: quay_username
-      password:
-        from_secret: quay_password
-      repo:
-        from_secret: quay_repo
-      registry: quay.io
 
-  - name: "Redeploy on stage"
+  - name: "Publish to Gitolite"
+    image: alpine/git
+    environment:
+      GITOLITE_KEY:
+        from_secret: gitolite_rsa_key_b64
+    commands:
+      - mkdir -p ~/.ssh
+      - echo $GITOLITE_KEY | base64 -d > ~/.ssh/id_rsa
+      - chmod 0600 ~/.ssh/id_rsa
+      - git remote add gitolite git@git.openware.com:baseapp
+      - GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no" git push -f --no-verify gitolite HEAD:master
+
+  - name: "Build image"
+    image: plugins/gcr
+    environment:
+      BUILD_EXPIRE: "3 month"
+    settings:
+      repo: gcr.io/openware-production/baseapp
+      build_args_from_env:
+        - BUILD_EXPIRE
+      json_key:
+        from_secret: openware_gcp_creds_base64
+
+  - name: "Redeploy on devkube"
     image: rubykube/microkube:0.2.0
     environment:
       WEBHOOK_JWT_SECRET:
