--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^1.0.4",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
+    "react-iframe": "^1.8.0",
     "react-intl": "^2.8.0",
     "react-maskinput": "^1.0.1",
     "react-redux": "^5.0.7",
