--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
     "qs": "^6.9.4",
+    "qrcode.react": "^1.0.0",
     "react": "16.10",
     "react-collapsible": "^2.8.0",
     "react-cookie-consent": "^2.5.0",
