--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@openware/components": "2.3.0",
     "@openware/cryptofont": "2.3.0",
+    "@types/compression-webpack-plugin": "^2.0.1",
     "@types/ws": "^6.0.4",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "bitcoincashjs": "0.1.10",
     "bootstrap": "^4.3.1",
+    "compression-webpack-plugin": "^3.0.1",
     "history": "^4.7.2",
     "i18n-iso-countries": "^3.7.8",
     "immutability-helper": "^3.0.0",
