--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss": "^7.0.23",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
