--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-intl": "^2.8.0",
     "react-items-carousel": "^2.8.0",
     "react-maskinput": "^1.0.1",
+    "react-media": "^1.10.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
