fix trailing slash

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen       3000;
     server_name  localhost;
 
+    rewrite ^/(.*)/$ /$1 permanent;
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
