--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,9 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     rewrite ^/(.*)/$ /$1 permanent;
-    error_page 404 /404.html;
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
-        try_files $uri $uri/ /index.html?/$request_uri =404;
+        try_files $uri $uri/ /index.html?/$request_uri;
     }
 }
