Feature: Update version and CI flow for sdk-citools to 2.4

--- a/.drone.yml
+++ b/.drone.yml
@@ -62,7 +62,7 @@ trigger:
   branch:
     exclude:
     - master
-    - "*-stable"
+    - "2-*-stable"
 
 ---
 kind: pipeline
@@ -81,7 +81,7 @@ steps:
       - yarn test:ci --collectCoverage=true
 
   - name: "Bump & Tag"
-    image: quay.io/openware/sdk-citools:2.3.1
+    image: quay.io/openware/sdk-citools:2.4.5
     environment:
       BRANCH_NAME: ${DRONE_BRANCH}
       REPO_NAME: ${DRONE_REPO}
@@ -109,10 +109,13 @@ steps:
     commands:
       - export latest_image=reg.openware.work/emirex/baseapp:$(cat .tags)
       - cd /home/app
-      - bundle exec rake payload:send[frontend,$latest_image,http://master.devkube.com:1337]
+      - bundle exec rake payload:send[frontend,$latest_image,http://$DRONE_BRANCH.devkube.com:1337]
+    when:
+      branch:
+        - master
 
   - name: "Push and Notify"
-    image: quay.io/openware/sdk-citools:2.3.1
+    image: quay.io/openware/sdk-citools:2.4.5
     environment:
       BOT_USERNAME: kite-bot
       BOT_NAME: Kite Bot
@@ -135,11 +138,12 @@ steps:
     when:
       branch:
         - master
-        - "*-stable"
+        - "2-*-stable"
 
 trigger:
   branch:
-  - "*-stable"
+  - master
+  - "2-*-stable"
   event:
   - push
 
