--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jquery": "^3.4.1",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
+    "qs": "^6.9.4",
     "react": "^16.4.2",
     "react-collapsible": "^2.8.0",
     "react-cookie-consent": "^2.5.0",
