--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-date-picker": "^7.0.0",
     "react-dom": "^16.4.2",
+    "react-dropdown": "^1.7.0",
     "react-fade-in": "^0.1.6",
     "react-google-recaptcha": "^1.0.4",
     "react-grid-layout": "^0.16.6",
