--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "history": "^4.7.2",
     "i18n-iso-countries": "^3.7.8",
     "immutability-helper": "^3.0.0",
+    "infinite-react-carousel": "^1.2.11",
     "jquery": "^3.4.1",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
