--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "postcss": "^7.0.23",
     "postcss-cli": "^6.1.3",
     "postcss-loader": "^3.0.0",
-    "qs": "^6.9.4",
     "qrcode.react": "^1.0.0",
+    "qs": "^6.9.4",
     "react": "16.10",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-collapsible": "^2.8.0",
     "react-cookie-consent": "^2.5.0",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-bootstrap": "^1.0.0-beta.16",
     "react-date-picker": "^7.0.0",
     "react-dom": "^16.6.3",
     "react-dropdown": "^1.7.0",
+    "react-dropdown-select": "^4.4.2",
     "react-fade-in": "^0.1.6",
     "react-ga": "^2.6.0",
     "react-google-recaptcha": "^1.0.4",
@@ -46,9 +47,9 @@
     "react-redux": "^6.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
     "react-scripts-ts": "^2.17.0",
     "react-scroll": "^1.7.14",
-    "react-scripts": "3.3.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
