--- a/.drone.yml
+++ b/.drone.yml
@@ -19,22 +19,27 @@ steps:
       - yarn test:ci --collectCoverage=true
       - yarn build
 
-  - name: "Stage with mock server"
-    image: alpine/git
-    environment:
-      PRIVATE_KEY:
-        from_secret: deploy_key
-    commands:
-      - echo "$PRIVATE_KEY" | base64 -d > id_rsa
-      - chmod 0600 id_rsa
-      - cd build/config/
-      - echo "window.env={api:{authUrl:'http://api-v2.mock.openware.work/api/v2/barong',tradeUrl:'http://api-v2.mock.openware.work/api/v2/peatio',applogicUrl:'http://api-v2.mock.openware.work/api/v2/applogic',rangerUrl:'ws://ranger.mock.openware.work/api/v2/ranger'}};" > env.js
-      - cat env.js
-      - cd /drone/src
-      - rsync -avzhre "ssh -i id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" build/ mock@mock.openware.work:/home/mock/builds/${DRONE_COMMIT_SHA:0:7}
-      - rsync -avzhre "ssh -i id_rsa -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null" coverage/ mock@mock.openware.work:/home/mock/builds/${DRONE_COMMIT_SHA:0:7}-coverage
-      - echo "http://${DRONE_COMMIT_SHA:0:7}.mock.openware.work"
-      - echo "http://${DRONE_COMMIT_SHA:0:7}-coverage.mock.openware.work"
+  - name: "Build enterprise customer image and push to reg.openware.work"
+      image: plugins/docker
+      environment:
+        BUILD_DOMAIN: ".openware.work"
+        REACT_APP_BUILD_VERSION: Enterprise
+      settings:
+        username:
+          from_secret: ow_registry_username
+        password:
+          from_secret: ow_registry_password
+        repo: reg.openware.work/emirex/baseapp
+        tags: ${DRONE_COMMIT:0:7}
+        build_args_from_env:
+          - REACT_APP_BUILD_VERSION
+          - BUILD_DOMAIN
+        registry: reg.openware.work
+      when:
+        branch:
+            - customer/emirex-2.5
+        event:
+            - push
 
   - name: "Notify staging"
     image: plugins/slack
