--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "qrcode.react": "^1.0.0",
     "qs": "^6.9.4",
     "react": "16.10",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-collapsible": "^2.8.0",
     "react-cookie-consent": "^2.5.0",
     "react-copy-to-clipboard": "^5.0.2",
